Add ability to get images hosted as customer attachments

--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,5 @@ CONSUMER_SECRET = ''
 ENDPOINT        = 'https://example.desk.com'
 MASTER_LANGUAGE = 'fr'
 
+AUTHENTICATED_CUSTOMER_CREDENTIALS=''
+
